--- a/ScriptManager/de.lproj/Localizable.strings
+++ b/ScriptManager/de.lproj/Localizable.strings
@@ -1,14 +1,39 @@
+// Menu
 "add-new-script" = "Neues Skript hinzufügen";
 "info-add-new-script" = "Teste und füge ein neues Skript deiner Liste hinzu";
 
 "add-new-group" = "Neue Gruppe hinzufügen";
 "info-add-new-group" = "Nutze Gruppen um deine Skripte zu organisieren";
 
+// List
 "saved %@" = "Gespeicherte Skripte (%@)";
+"empty-scripts" = "Füge ein neues Skript hinzu, um es über diese Liste auszuführen";
 
+// Add new script
 "name-add-script" = "Skriptname";
-"path-add-script" = "Pfad zum Skript";
-"test-script" = "Skript testen";
+"path-add-script" = "Auszuführendes Skript";
+"test-script" = "Testen";
 "test-success" = "Erfolgreich getestet";
 "test-failed" = "Skript fehlerhaft";
-"save-script" = "Skript speichern";
+"save-script" = "Speichern";
+
+// Details
+"path" = "Befehl:";
+"last-run" = "Zuletzt ausgeführt:";
+
+// Delete-Alert
+"delete" = "Löschen";
+"cancel" = "Abbrechen";
+"delete-title" = "Skript-Eintrag löschen";
+"delete-msg" = "Bist du sicher, dass du dieses Skript aus deiner Liste entfernen möchtest?";
+
+// Settings
+"settings" = "Einstellungen";
+"shell-type" = "Shell-Typ";
+"path-shell" = "Pfad zur Shell";
+"path-profile" = "Pfad zum Profil";
+"shell-unicode" = "Unicode-Format";
+"settings-reset" = "Gespeicherte Daten löschen";
+"settings-save" = "Einstellungen speichern";
+"settings-delete-title" = "Datenstand löschen";
+"settings-delete-msg" = "Bist du sicher, dass du deine gespeicherten Skripte aus deiner Liste entfernen möchtest?";
