--- a/ScriptManager/de.lproj/Localizable.strings
+++ b/ScriptManager/de.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 "test-success" = "Erfolgreich getestet";
 "test-failed" = "Skript fehlerhaft";
 "save-script" = "Speichern";
+"icon-script" = "Skript-Icon";
 
 // Details
 "path" = "Befehl:";
